/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'org.springframework.boot' version '3.3.3'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'java'
    id 'org.flywaydb.flyway' version '10.8.1'
    id 'io.qameta.allure' version '2.11.2'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'sticker-art-gallery'
sourceCompatibility = '17'
targetCompatibility = '17'

repositories {
    mavenLocal()
    maven { url 'https://maven.aliyun.com/repository/public' }
    maven { url 'https://repo.huaweicloud.com/repository/maven/' }
    maven { url 'https://jitpack.io' }
    maven { url 'https://repo.spring.io/milestone' }
    mavenCentral()
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.ai:spring-ai-bom:1.0.0"
        mavenBom "io.qameta.allure:allure-bom:2.25.0"
    }
}

dependencies {
    // Spring AI BOM для управления версиями
    implementation platform('org.springframework.ai:spring-ai-bom:1.0.0')
    
    implementation 'org.springframework.boot:spring-boot-starter'
    // Новый артефакт для OpenAI (версия из BOM)
    implementation 'org.springframework.ai:spring-ai-starter-model-openai'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'com.github.ben-manes.caffeine:caffeine'
    
    // Hibernate L2 Cache с Caffeine через JCache
    implementation 'org.hibernate.orm:hibernate-jcache'
    implementation 'javax.cache:cache-api:1.1.1'
    implementation 'com.github.ben-manes.caffeine:jcache:3.1.8'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.telegram:telegrambots:6.9.7.1'
    implementation 'org.json:json:20220924'
    implementation 'com.squareup.okhttp3:okhttp:3.14.9'
    implementation 'org.slf4j:slf4j-api:2.0.16'
    implementation 'ch.qos.logback:logback-classic:1.5.6'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.2'
    implementation 'net.gcardone.junidecode:junidecode:0.5.1'
    implementation 'net.datafaker:datafaker:2.3.1'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'javax.xml.bind:jaxb-api:2.3.1'
    implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.6'
    implementation 'com.pngencoder:pngencoder:0.16.0' // Быстрый PNG энкодер
    
    // Swagger/OpenAPI
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
    
    runtimeOnly 'org.postgresql:postgresql'
    
    // Flyway для миграций БД
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.qameta.allure:allure-junit5'
    testImplementation 'io.qameta.allure:allure-rest-assured'
    testImplementation 'io.qameta.allure:allure-java-commons'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.12.0'
    testImplementation 'io.rest-assured:rest-assured:5.4.0'
    testImplementation 'io.rest-assured:json-schema-validator:5.4.0'
    testRuntimeOnly 'com.h2database:h2'
    developmentOnly 'com.h2database:h2'  // H2 для dev профиля
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Javadoc) {
    options.encoding = 'UTF-8'
}

// JUnit 5 configuration
// UNIT тесты - быстрые, без внешних зависимостей
test {
    useJUnitPlatform {
        // Исключаем бенчмарки и интеграционные тесты из обычного запуска
        excludeTags 'benchmark', 'integration'
    }
    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat "full"
        showStandardStreams = true
    }
    
    // Используем профиль unit для быстрых тестов
    systemProperty 'spring.profiles.active', 'unit'
    
    // Исключаем интеграционные тесты и бенчмарки по имени файлов
    exclude '**/*IntegrationTest.class'
    exclude '**/benchmark/**'
    
    // Отключаем Configuration Cache для тестов
    notCompatibleWithConfigurationCache()
}

// INTEGRATION тесты - с внешними зависимостями
task integrationTest(type: Test) {
    useJUnitPlatform {
        // Запускаем только интеграционные тесты (по тегу)
        includeTags 'integration'
        // Исключаем бенчмарки
        excludeTags 'benchmark'
    }
    testLogging {
        events "started", "passed", "skipped", "failed"
        exceptionFormat "full"
        showStandardStreams = false  // Отключаем для чистоты вывода
        showCauses = true
        showStackTraces = true
        displayGranularity = 2
        
        // Показываем название теста при запуске и результат
        afterTest { desc, result ->
            println "  ✓ ${desc.className.tokenize('.').last()}.${desc.name} - ${result.resultType} (${result.endTime - result.startTime}ms)"
        }
        
        // Показываем прогресс по файлам
        beforeTest { desc ->
            println "  → Запуск: ${desc.className.tokenize('.').last()}.${desc.name}"
        }
    }
    
    // Используем профиль test для интеграционных тестов
    systemProperty 'spring.profiles.active', 'test'
    
    // Таймаут 15 секунд на каждый интеграционный тест
    systemProperty 'junit.jupiter.execution.timeout.default', '15s'
    systemProperty 'junit.jupiter.execution.timeout.mode', 'enabled'
    
    // Отключаем Configuration Cache для тестов
    notCompatibleWithConfigurationCache()
    
    // Загружаем переменные окружения для интеграционных тестов
    doFirst {
        def envFile = file('.env.app')
        if (envFile.exists()) {
            envFile.readLines().each { line ->
                if (line && !line.startsWith('#') && line.contains('=')) {
                    def (key, value) = line.split('=', 2)
                    environment key.trim(), value.trim()
                }
            }
            println '✅ Запуск INTEGRATION тестов с переменными окружения из .env.app'
            println '⚠️  Работает с продакшен БД!'
        } else {
            println '⚠️ Файл .env.app не найден, используем значения по умолчанию'
        }
    }
    
    description = 'Запускает интеграционные тесты (с внешними зависимостями: БД, Redis)'
    group = 'verification'
}

// TON DONATIONS тесты - отдельная группа для тестирования TON функциональности
task tonTest(type: Test) {
    useJUnitPlatform {
        // Запускаем только TON тесты
        includeTags 'ton'
    }
    testLogging {
        events "started", "passed", "skipped", "failed"
        exceptionFormat "full"
        showStandardStreams = false  // Отключаем вывод System.out/err для чистоты
        showCauses = true
        showStackTraces = true
        displayGranularity = 2
        
        afterTest { desc, result ->
            println "  ✓ ${desc.className.tokenize('.').last()}.${desc.name} - ${result.resultType} (${result.endTime - result.startTime}ms)"
        }
        
        beforeTest { desc ->
            println "  → ${desc.className.tokenize('.').last()}.${desc.name}"
        }
    }
    
    systemProperty 'spring.profiles.active', 'test'
    systemProperty 'junit.jupiter.execution.timeout.default', '15s'
    systemProperty 'junit.jupiter.execution.timeout.mode', 'enabled'
    
    notCompatibleWithConfigurationCache()
    
    doFirst {
        def envFile = file('.env.app')
        if (envFile.exists()) {
            envFile.readLines().each { line ->
                if (line && !line.startsWith('#') && line.contains('=')) {
                    def (key, value) = line.split('=', 2)
                    environment key.trim(), value.trim()
                }
            }
            println '✅ Запуск TON DONATIONS тестов'
        }
    }
    
    description = 'Запускает только TON Donations тесты (Wallet + Donation Flow)'
    group = 'verification'
}

// BENCHMARK тесты - только для локального запуска
task benchmarkTest(type: Test) {
    useJUnitPlatform {
        // Запускаем ТОЛЬКО бенчмарки
        includeTags 'benchmark'
    }
    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat "full"
        showStandardStreams = true
    }
    
    // Используем профиль test
    systemProperty 'spring.profiles.active', 'test'
    
    // Отключаем Configuration Cache для тестов
    notCompatibleWithConfigurationCache()
    
    // Загружаем переменные окружения
    doFirst {
        def envFile = file('.env.app')
        if (envFile.exists()) {
            envFile.readLines().each { line ->
                if (line && !line.startsWith('#') && line.contains('=')) {
                    def (key, value) = line.split('=', 2)
                    environment key.trim(), value.trim()
                }
            }
            println '✅ Запуск BENCHMARK тестов с переменными окружения из .env.app'
            println '⚠️  RealHttpBenchmarkTest требует запущенное приложение на http://localhost:8080'
        } else {
            println '⚠️ Файл .env.app не найден, используем значения по умолчанию'
        }
    }
    
    description = 'Запускает бенчмарк-тесты (GalleryLoadBenchmarkTest, RealHttpBenchmarkTest)'
    group = 'verification'
}

// Все тесты вместе
task allTests {
    dependsOn test, integrationTest
    description = 'Запускает все тесты (unit + integration)'
}

// Allure configuration
allure {
    version = '2.25.0'
    adapter {
        autoconfigure = true
        aspectjWeaver = true
        frameworks {
            junit5 {
                adapterVersion = '2.25.0'
            }
        }
    }
}

// Flyway configuration
flyway {
    url = "jdbc:postgresql://${System.getenv('DB_HOST') ?: 'amvera-e13nst-run-postgres'}:${System.getenv('DB_PORT') ?: '5432'}/${System.getenv('DB_NAME') ?: 'mindbase'}"
    user = System.getenv('DB_USERNAME') ?: 'dalek'
    password = System.getenv('DB_PASSWORD') ?: 'postgres'
    locations = ['classpath:db/migration']
    baselineOnMigrate = true
    validateOnMigrate = true
    baselineVersion = '1.0.0'
    baselineDescription = 'Initial baseline'
}
